# flist-walker

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README-ja.md  README.md  THIRD_PARTY_NOTICES.txt  flistwalker.ignore.txt.example  pyproject.toml
.github/: release-template.md  release-v0.17.5.md
docs/: APP_SPLIT_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  CHANGE-PLAN-20260330-maintainability-hardening.md  CHANGE-PLAN-20260331-app-core-segmentation.md  CHANGE-PLAN-20260401-app-rs-followup-split.md  (+107 more)
prototype/python/: pyproject.toml
prototype/python/docs/: GUI-TESTPLAN.md  GUI-TESTREPORT.md
prototype/python/scripts/: run-gui.ps1
prototype/python/src/fast_file_finder/: __init__.py  cli.py  gui.py  indexer.py
prototype/python/tests/: test_actions.py  test_cli_args.py  test_indexer.py  test_search.py  test_ui_model.py
rust/: Cargo.toml  README.md  build.rs  windows_resource_build.rs
rust/src/: actions.rs  app.rs  entry.rs  fs_atomic.rs  ignore_list.rs  indexer.rs  lib.rs  main.rs  path_utils.rs  query.rs  runtime_config.rs  search.rs  ui_model.rs  update_security.rs  updater.rs
rust/src/app/: action_authorization.rs  adaptive_walker.rs  bootstrap.rs  cache.rs  config.rs  coordinator.rs  filelist.rs  index_coordinator.rs  index_worker.rs  input.rs  input_dialogs.rs  input_history.rs  mod.rs  pipeline.rs  pipeline_owner.rs  preview_flow.rs  query_state.rs  render.rs  render_dialogs.rs  render_panels.rs  render_snapshot.rs  render_tabs.rs  render_theme.rs  response_flow.rs  result_flow.rs  result_reducer.rs  root_browser.rs  search_coordinator.rs  session.rs  shell_support.rs  state.rs  tab_state.rs  tabs.rs  ui_state.rs  update.rs  worker_bus.rs  worker_bus_lifecycle.rs  worker_channel.rs  worker_protocol.rs  worker_runtime.rs  (+3 more)
rust/src/app/filelist/: commands.rs  confirmations.rs  creation.rs  manager.rs  mod.rs  responses.rs
rust/src/app/index_worker/tests/: mod.rs
rust/src/app/input/: actions.rs  dialogs.rs  history.rs  ime.rs  mod.rs  navigation.rs  shortcuts.rs  text_editing.rs
rust/src/app/session/tests/: mod.rs
rust/src/app/tests/: action_commands.rs  app_core.rs  cache_tests.rs  index_pipeline.rs  mod.rs  pipeline_tests.rs  query_history.rs  render_tests.rs  root_list_manager.rs  session_restore.rs  session_tabs.rs  shortcut_action.rs  shortcut_navigation.rs  shortcut_pin_focus.rs  shortcut_root_history.rs  shortcuts.rs  shutdown.rs  support.rs  tab_background_responses.rs  tab_contract.rs  tab_drag.rs  tab_lifecycle.rs  tab_ownership.rs  tab_result_cache.rs  update_commands.rs  window_ime.rs
rust/src/app/tests/index_pipeline/: dialogs_and_inflight.rs  filelist_background.rs  filelist_creation.rs  filelist_lifecycle.rs  filelist_root_cleanup.rs  kind_resolution.rs  mod.rs  search_filelist.rs  search_refresh.rs
rust/src/indexer/: filelist_hierarchy.rs  filelist_reader.rs  filelist_writer.rs  mod.rs  walker.rs
rust/src/indexer/tests/: mod.rs  perf.rs
rust/src/query/: compiled.rs
rust/src/runtime_config/tests/: mod.rs
rust/src/search/: cache.rs  config.rs  execute.rs  match_eval.rs  mod.rs  rank.rs
rust/src/search/tests/: mod.rs
rust/src/ui_model/: display.rs  highlight.rs  mod.rs  on_demand.rs  preview.rs
rust/src/updater/: apply.rs  manifest.rs  release.rs  staging.rs  transaction.rs
rust/tests/: cli_contract.rs
rust/tests/fixtures/gui-smoke/: SHA256SUMS  fixture-spec.tsv  flistwalker.ignore.txt
rust/tests/fixtures/gui-smoke/root/: FileList.txt  README-preview.txt
rust/tests/fixtures/gui-smoke/root/actions/: open-target.txt  space name.txt
rust/tests/fixtures/gui-smoke/root/docs/: alpha-report.md  beta_notes.txt
rust/tests/fixtures/gui-smoke/root/ignored/: old.tmp
rust/tests/fixtures/gui-smoke/root/nested/: FileList.txt  child-one.txt
scripts/: build-rust-macos-clean.sh  (+25 more)
(+58 files in other folders)
