[package]
name = "flist-walker"
version = "0.2.1"
edition = "2021"

[lib]
name = "flist_walker"
path = "src/lib.rs"

[[bin]]
name = "flistwalker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
fuzzy-matcher = "0.3"
native-dialog = "0.7"
regex = "1.11"
walkdir = "2.5"
resvg = "0.43"

[build-dependencies]
ico = "0.3"
resvg = "0.43"
winres = "0.1"
