[package]
name = "flist-walker"
version = "0.11.4"
edition = "2021"
license = "MIT"

[lib]
name = "flist_walker"
path = "src/lib.rs"

[[bin]]
name = "flistwalker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
fuzzy-matcher = "0.3"
native-dialog = "0.7"
regex = "1.11"
walkdir = "2.5"
jwalk = "0.8"
resvg = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memory-stats = "1.2"
ctrlc = "3.4"

[build-dependencies]
ico = "0.3"
resvg = "0.43"
winres = "0.1"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
