[package]
name = "flist-walker"
version = "0.16.0"
edition = "2021"
license = "MIT"

[lib]
name = "flist_walker"
path = "src/lib.rs"

[[bin]]
name = "flistwalker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
fuzzy-matcher = "0.3"
native-dialog = "0.7"
regex = "1.11"
walkdir = "2.5"
jwalk = "0.8"
resvg = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memory-stats = "1.2"
ctrlc = "3.4"
rayon = "1.10"
semver = "1.0"
sha2 = "0.10"
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
ureq = { version = "2.10", default-features = true }
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[build-dependencies]
ico = "0.3"
resvg = "0.43"
winres = "0.1"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
